feat: get message api endpoint
